--- a/app/src/main/res/layout/downtown_stamford_fragment.xml
+++ b/app/src/main/res/layout/downtown_stamford_fragment.xml
@@ -11,6 +11,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <ProgressBar
+        android:id="@+id/progress"
+        android:visibility="invisible"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true" />
+
     <com.droid.mooresoft.materiallibrary.widgets.FloatingActionButton
         android:id="@+id/browser_button"
         android:layout_width="66dp"
