--- a/app/src/main/res/layout/navigation_drawer_activity.xml
+++ b/app/src/main/res/layout/navigation_drawer_activity.xml
@@ -38,6 +38,7 @@
 
             <!-- hero image -->
             <ImageView
+                android:id="@+id/hero_image"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
