--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,9 +1,10 @@
 <resources>
 
     <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
-        <item name="android:homeAsUpIndicator">@mipmap/ic_drawer</item>
+        <item name="android:homeAsUpIndicator">@null</item>
         <item name="android:actionBarStyle">@style/AppTheme.ActionBar</item>
         <item name="android:textColor">@color/regular_text</item>
+        <item name="android:colorPrimary">@color/orange</item>
     </style>
 
     <style name="AppTheme.ActionBar" parent="android:style/Widget.Holo.Light.ActionBar.Solid.Inverse">
